<resources>
    <string name="app_name" translatable="false">AndroidPhincon</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="logo">logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="register">Register</string>
    <string name="profile">profile</string>
    <string name="button_photo" translatable="false">button photo</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password">New Password</string>
    <string name="save">Save</string>
    <string name="change_language">Change Language</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="wrong_email_format">Wrong Email Format</string>
    <string name="camera">Camera</string>
    <string name="galllery">Gallery</string>
    <string name="select_image">Select Image</string>
    <string name="loading">Loading...</string>
    <string name="dashboard_fragment">Ini adalah Fragment Dashboard</string>
    <string name="change_password_title">Change Password</string>
    <string name="password_not_match">Password not match</string>
    <string name="register_success">Register Berhasil</string>
    <string name="choose_picture">Choose a Picture</string>
    <string name="back_button">back button</string>
    <string name="detail_product">Product Detail</string>
    <string name="stock">Stock</string>
    <string name="size">Size</string>
    <string name="weight">Weight</string>
    <string name="type">Type</string>
    <string name="description">Description</string>
    <string name="image_product">image product</string>
    <string name="other_product">Other Product</string>
    <string name="search_history">Search History</string>
    <string name="buy">Buy</string>
    <string name="trolley">Trolley</string>
    <string name="sellect_all">Sellect all</string>
    <string name="total_price">Total Price</string>
    <string name="trolley_plus">+ Trolley</string>
    <string name="badge">badge</string>
    <string name="your_order_is_successful">Your Order is Successful</string>
    <string name="give_your_rating">Give Your Rating</string>
    <string name="submit">Submit</string>
    <string name="total">Total</string>
    <string name="initiate_buy">0</string>
    <string name="add_product_value">Add Product Value</string>
    <string name="decrease_product_value">decrease product value</string>
    <string name="remove_product_from_trolley">remove product from trolley</string>
    <string name="empty_image">empty image</string>
    <string name="empty_data">Empty Data</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort By</string>
    <string name="image_view">Image View</string>
    <string name="retry">Retry</string>
    <string name="id" translatable="false">ID</string>
    <string name="notification">Notification</string>
    <!--    Firebase-->
    <string name="default_web_client_id" translatable="false">1037486014292-ugjuav872pt9tp2a70nl0k0bjce3pio9.apps.googleusercontent.com</string>
    <string name="gcm_defaultSenderId" translatable="false">1037486014292</string>
    <string name="google_api_key" translatable="false">AIzaSyD5F91jl0oBRMHAVUeCoPwXlleCsgv-rAg</string>
    <string name="google_app_id" translatable="false">1:1037486014292:android:8d26778c5e020ac73dd2c1</string>
    <string name="google_crash_reporting_api_key" translatable="false">AIzaSyD5F91jl0oBRMHAVUeCoPwXlleCsgv-rAg</string>
    <string name="google_storage_bucket" translatable="false">trainingphincon.appspot.com</string>
    <string name="project_id" translatable="false">trainingphincon</string>
</resources>