<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <CheckBox
        android:id="@+id/checkBox_select_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBox_select_item"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_product"
                android:layout_width="104dp"
                android:layout_height="104dp"
                android:background="@color/primaryColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/image_product" />

            <TextView
                android:id="@+id/tv_tittle_product"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:ellipsize="marquee"
                android:fadingEdge="horizontal"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_product"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Jam Tangan" />

            <TextView
                android:id="@+id/tv_price_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/img_product"
                app:layout_constraintTop_toBottomOf="@+id/tv_tittle_product"
                tools:text="Rp. 10.000" />

            <ImageView
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_price_product"
                app:srcCompat="@drawable/baseline_delete_24"
                android:contentDescription="@string/remove_product_from_trolley" />

            <ImageButton
                android:id="@+id/add_quantity"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_rounded_active"
                android:src="@drawable/baseline_add_24"
                app:layout_constraintBottom_toBottomOf="@+id/decrease_quantity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/decrease_quantity"
                app:tint="@color/white"
                android:contentDescription="@string/add_product_value" />

            <TextView
                android:id="@+id/tv_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/initiate_buy"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/add_quantity"
                app:layout_constraintEnd_toStartOf="@+id/add_quantity"
                app:layout_constraintTop_toTopOf="@+id/add_quantity" />

            <ImageButton
                android:id="@+id/decrease_quantity"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_rounded_active"
                android:src="@drawable/baseline_remove_24"
                app:layout_constraintBottom_toBottomOf="@+id/btn_delete"
                app:layout_constraintEnd_toStartOf="@+id/tv_quantity"
                app:layout_constraintTop_toTopOf="@+id/btn_delete"
                app:tint="@color/white"
                android:contentDescription="@string/decrease_product_value" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>